提交修改样式

--- a/_posts/2015-10-31-vim-use.md
+++ b/_posts/2015-10-31-vim-use.md
@@ -25,10 +25,10 @@ description: 快速学习使用vim
 
 进入vim后，找到编辑菜单，打开启动设定，有个窗口文件，_vimrc文件
 设置文件编码格式：
-**set encoding=utf8**
-**set termencoding=utf-8**
-**set fileencoding=utf-8**
-**set fileencodings=ucs-bom,utf-8,gbk,chinese,cp936**
+- **set encoding=utf8**
+- **set termencoding=utf-8**
+- **set fileencoding=utf-8**
+- **set fileencodings=ucs-bom,utf-8,gbk,chinese,cp936**
 
 ## vim windows 下提示信息乱码解决方案
 
