提交新文章

--- a/_posts/2015-10-31-git-ssh.md
+++ b/_posts/2015-10-31-git-ssh.md
@@ -1,9 +1,12 @@
 ---
-layout:post
-title:GIT配置SSH协议
-date:2015-10-31
-categories:blog
+layout: post
+title: GIT配置SSH协议
+date: 2015-10-31
+categories: blog
+tags: [git,ssh]
 description: git上如何配置ssh
+
+
 ---
 
 ## 说明
