--- a/_posts/2015-10-31-vim-use.md
+++ b/_posts/2015-10-31-vim-use.md
@@ -5,10 +5,9 @@ date:2015-10-31
 categories:blog
 tags:[vim,use]
 description: 快速学习使用vim
-
 ---
 
-## vim常用命令
+## vim常用命令123
 
 - i:插入，打开vim，按i进入插入操作。否则不能进行内容编辑。
 - esc:返回，返回到查看界面。
