save new article

--- a/_posts/2016-03-01-collection-01.md
+++ b/_posts/2016-03-01-collection-01.md
@@ -23,7 +23,7 @@ description: java 关于覆写object对象问题
 	应为a对象和b对象的hashCode不一样，所以在HashSet中被认为是2个对象。覆写了hashCode后，hashCode
 	值，一样，对象一样，就是同一个对象。
 
-     {% highlight bash lineno %}
+    {% highlight ruby linenos %}
          @Override
          public boolean equals(Object obj) {
 	    // TODO Auto-generated method stub
@@ -47,7 +47,7 @@ description: java 关于覆写object对象问题
         }
     {% endhighlight %}
 	
-    {% highlight bash lineno %}
+    {% highlight ruby linenos %}
         @Override
         public int hashCode() {
 	    // TODO Auto-generated method stub
