save new article

--- a/_posts/2016-03-01-collection-01.md
+++ b/_posts/2016-03-01-collection-01.md
@@ -57,4 +57,4 @@ description: java 关于覆写object对象问题
 	    result = prime*result+ (name == null ? 0: name.hashCode());
 	    return result;
           }
-    {% highlight bash lineno %}
+   {% endhighlight %}
