save new article

--- a/_posts/2016-03-01-collection-01.md
+++ b/_posts/2016-03-01-collection-01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title； java集合中关于覆写equals和hashCode
+title: java集合中关于覆写equals和hashCode
 date: 2016-03-01
 categories: java
 tags: [java,collection]
@@ -24,15 +24,23 @@ description: java 关于覆写object对象问题
 	值，一样，对象一样，就是同一个对象。
 
     {% highlight ruby linenos %}
+
          @Override
          public boolean equals(Object obj) {
+
 	    // TODO Auto-generated method stub
 	    if(this == obj)
+
 		return true;
+
 	    if(obj == null)
+
 		return false;
+
 	    if(getClass()!= obj.getClass())
+
 		return false;
+
 	    Person p = (Person) obj;
 	    if(age != p.age)
 		return false;
