save new article

--- a/_posts/2016-03-01-collection-01.md
+++ b/_posts/2016-03-01-collection-01.md
@@ -10,7 +10,7 @@ description: java 关于覆写object对象问题
 
 ### 类的equals和hashCode的覆写
 
-    *判断对象是否相同的依据*
+   **判断对象是否相同的依据**
 
 	Object 的 equals 和 hashCode
 	java 规定，如果equals 相同，那么hashCode一定相等，如果hashCode 相同，equals不一定相等。
@@ -24,15 +24,27 @@ description: java 关于覆写object对象问题
 	值，一样，对象一样，就是同一个对象。
 
     {% highlight ruby linenos %}
-
          @Override
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
          public boolean equals(Object obj) {   
-	    // TODO Auto-generated method stub  
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
 	    if(this == obj)  
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
 		return true;  
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
 	    if(obj == null) 
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
 		return false;  
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
 	    if(getClass()!= obj.getClass())  
+    {% endhighlight %}  
+    {% highlight ruby linenos %}
 		return false;  
 	    Person p = (Person) obj;  
 	    if(age != p.age)  
